[gd_scene load_steps=10 format=3 uid="uid://bcs7ub6422ifi"]

[ext_resource type="Texture2D" uid="uid://jon6nphrfhlc" path="res://Goblin.png" id="1_3yqyl"]
[ext_resource type="Script" uid="uid://chrokqliur54i" path="res://enemy.gd" id="1_wujgv"]
[ext_resource type="Texture2D" uid="uid://7vm8gfca8yit" path="res://baremptyl.png" id="2_wujgv"]
[ext_resource type="Texture2D" uid="uid://dgllv4rwwnbnu" path="res://bartop.png" id="3_hb8ge"]
[ext_resource type="Texture2D" uid="uid://fpoeahisuf7l" path="res://bar.png" id="4_e1ltt"]
[ext_resource type="Texture2D" uid="uid://cyns1ouna73g6" path="res://tiles.png" id="5_dxifv"]
[ext_resource type="FontFile" uid="uid://t744rj8lyfu4" path="res://fonts/Adventure ReQuest.otf" id="6_pwjut"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("5_dxifv")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ar8e5"]
atlas = ExtResource("5_dxifv")
region = Rect2(128, 0, 64, 64)

[node name="Enemy" type="Node2D"]
script = ExtResource("1_wujgv")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_3yqyl")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -44.0
offset_top = 48.0
offset_right = 50.0
offset_bottom = 76.0
step = 1.64
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("2_wujgv")
texture_over = ExtResource("3_hb8ge")
texture_progress = ExtResource("4_e1ltt")

[node name="Attack" type="Sprite2D" parent="."]
position = Vector2(6.00001, -82)
scale = Vector2(0.550781, 0.514063)
texture = SubResource("AtlasTexture_n0g06")

[node name="AttackLabel" type="Label" parent="."]
offset_left = 2.0
offset_top = -96.0
offset_right = 42.0
offset_bottom = -73.0
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("6_pwjut")
text = "1"

[node name="Shield" type="Sprite2D" parent="."]
position = Vector2(6.00001, -83)
scale = Vector2(0.550781, 0.538542)
texture = SubResource("AtlasTexture_ar8e5")

[node name="DefenceLabel" type="Label" parent="."]
offset_left = 3.0
offset_top = -96.0
offset_right = 43.0
offset_bottom = -73.0
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("6_pwjut")
text = "1"

[node name="HealthLabel" type="Label" parent="."]
offset_left = -38.0
offset_top = 51.0
offset_right = 47.0
offset_bottom = 74.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("6_pwjut")
text = "100/100"
horizontal_alignment = 1
